--- a/src/components/Row.css
+++ b/src/components/Row.css
@@ -1,24 +1,24 @@
-h2 {
-  color: #111;
-}
-
-.Row {
+.row {
   margin-left: 20px;
   color: #fff;
 }
 
-.posters {
+.row h2 {
+  color: #111;
+}
+
+.rowPosters {
   display: flex;
   overflow-y: hidden;
   overflow-x: scroll;
   padding: 20px;
 }
 
-.posters::-webkit-scrollbar {
+.rowPosters::-webkit-scrollbar {
   display: none;
 }
 
-.poster {
+.rowPoster {
   object-fit: contain;
   width: 100%;
   max-height: 100px;
@@ -30,10 +30,10 @@ h2 {
   transform: scale(1.08);
 }
 
-.posterLarge {
+.rowPosterLarge {
   max-height: 250px;
 }
 
-.posterLarge:hover {
+.rowPosterLarge:hover {
   transform: scale(1.09);
 }
