--- a/src/components/Pages/About/About.css
+++ b/src/components/Pages/About/About.css
@@ -1,6 +1,102 @@
-.about {
-  background-color: black;
-  height: 100vh;
-  width: 100vw;
+html {
+  box-sizing: border-box;
+  font-size: 75%;
 }
 
+html,
+body,
+main {
+  height: 100%;
+}
+
+.global-header {
+  align-items: center;
+  display: flex;
+  height: var(--header-height);
+  justify-content: center;
+  left: 0;
+  position: fixed;
+  top: 0;
+  transition: background-color 0.3s, color 0.3s;
+  width: 100%;
+  z-index: 2;
+}
+
+.global-header[data-active='false'] {
+  color: #f7f8f8;
+}
+
+.global-header[data-active='true'] {
+  background-color: #f7f8f8;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.contents {
+  counter-reset: number;
+  margin: auto;
+  max-width: 960px;
+  padding: 5rem 5%;
+}
+
+.contents-item {
+  padding-top: 61.8%;
+  position: relative;
+}
+
+.contents-item:nth-child(1) {
+  background-color: #4d778d;
+}
+.contents-item:nth-child(2) {
+  background-color: #bda097;
+}
+.contents-item:nth-child(3) {
+  background-color: #191141;
+}
+.contents-item:nth-child(4) {
+  background-color: #4d778d;
+}
+.contents-item:nth-child(5) {
+  background-color: #bda097;
+}
+.contents-item:nth-child(6) {
+  background-color: #191141;
+}
+.contents-item:nth-child(7) {
+  background-color: #4d778d;
+}
+.contents-item:nth-child(8) {
+  background-color: #bda097;
+}
+.contents-item:nth-child(9) {
+  background-color: #191141;
+}
+.contents-item:nth-child(10) {
+  background-color: #4d778d;
+}
+.contents-item:nth-child(11) {
+  background-color: #bda097;
+}
+.contents-item:nth-child(12) {
+  background-color: #191141;
+}
+
+.contents-item::after {
+  align-items: center;
+  color: #f7f8f8;
+  content: '' counter(number);
+  counter-increment: number;
+  display: flex;
+  font-family: 'Lobster', cursive;
+  font-size: 3em;
+  height: 100%;
+  justify-content: center;
+  left: 0;
+  position: absolute;
+  text-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
+  top: 0;
+  width: 100%;
+}
+
+.contents-item + .contents-item {
+  margin-top: 2.5em;
+}
